Fix text contrast issue about.html

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@
 }
 
 .about__page h1 {
-    color: #a60000
+    color: #f84444
 }
 
 #about__tallblock {
